--- a/servant-reflex.cabal
+++ b/servant-reflex.cabal
@@ -39,7 +39,7 @@ library
     mtl                 >= 2.2.1 && < 2.3,
     network-uri         >= 2.6  && < 2.7,
     reflex              >= 0.5  && < 0.6,
-    reflex-dom          == 0.4  && < 0.5,
+    reflex-dom-core     >= 0.4  && < 0.5,
     safe                >= 0.3.9 && < 0.4,
     servant             >= 0.8  && < 0.12,
     servant-auth        >= 0.2.1 && < 0.3,
@@ -56,7 +56,7 @@ executable example
     buildable: True
   else
     buildable: False
-  build-depends: aeson, reflex, servant-reflex, base, scientific, servant, reflex-dom, text
+  build-depends: aeson, reflex, servant-reflex, base, scientific, servant, reflex-dom-core, text
   default-language: Haskell2010
   main-is: Example.hs
   other-modules: API
